objects/Service_Request_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Case# 00654187 - Service Mgmt Phase 2, First Release (Rel 6.0) - Arokia Nathan</description>
    <fields>
        <fullName>Default_Value__c</fullName>
        <description>A default value can be specified in this field on Inbound. The value has to be a literal value and will be set if the Spectrum service does not send a value.</description>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Update_On_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevents the field from being updated when Spectrum is sending an update.</description>
        <label>Do Not Update On DML Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <description>The API Name of the field to include in the mappings</description>
        <label>Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inner_Object_Of__c</fullName>
        <description>For future enhancement. Not implemented yet.</description>
        <label>Inner Object Of</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Inbound__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether this field is used only in the Inbound service and not in the Outbound.</description>
        <label>Is Inbound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSON_Name__c</fullName>
        <description>The label used when encoding/decoding into JSON String.</description>
        <label>JSON Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JSON_Object__c</fullName>
        <description>For future enhancement. Not used yet.</description>
        <label>JSON Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outbound_Type__c</fullName>
        <description>The type that needs to be set when pushing this data to Spectrum. This will prevent all values being sent as Strings. For example, setting this value to Integer will ensure the value is sent as an Integer in the JSON payload.</description>
        <label>Outbound Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sObject_Name__c</fullName>
        <description>The sObject to pull the field from. Possible values include: Opportunity, Account, and Contact.</description>
        <label>sObject Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Service Request Settings</label>
</CustomObject>